Updated DScaler 5 info with link to help and specif authors and thanks

--- a/htdocs/Authors5.htm
+++ b/htdocs/Authors5.htm
@@ -12,7 +12,7 @@
   "HTML Tidy for Windows (vers 7 December 2008), see www.w3.org" />
   <!-- #BeginEditable "doctitle" -->
 
-  <title>DScaler Media Decoders</title><!-- #EndEditable "doctitle"-->
+  <title>DScaler - Authors</title><!-- #EndEditable "doctitle"-->
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="keywords" content="deinterlace TV Video" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -50,7 +50,7 @@
     <div id="header">
       <div id="wrapper-header2">
         <div id="wrapper-header3">
-          <h1><!-- #BeginEditable "Page%20Title" -->DScaler Media Decoders 
+          <h1><!-- #BeginEditable "Page%20Title" -->DScaler Authors&nbsp; 
           <!-- #EndEditable "Page%20Title"--></h1>
         </div><!--wrapper-header3-->
       </div><!--wrapper-header2-->
@@ -60,26 +60,7 @@
   <div id="wrapper-content">
     <div id="wrapper-menu-page">
       <div id="menu-page">
-        <!-- #BeginEditable "PageNav" -->
-
-        <h3>Get Media Decoders</h3>
-
-        <ul>
-          <li><a href=
-          "http://prdownloads.sourceforge.net/deinterlace/DScaler5008.exe">Experimental
-          (5.0.0.8)</a></li>
-        </ul>
-
-        <h3>Documentation</h3>
-        <ul>
-          <li><a href="./Help5/">Online Help</a><br /></li>
-  
-          <li><a href="Authors5.htm">Authors</a><br /></li>
-  
-          <li><a href="Thanks5.htm">Thanks</a><br /></li>
-        </ul>
-				
-				<!-- #EndEditable "PageNav"-->
+        <!-- #BeginEditable "PageNav" --><!-- #EndEditable "PageNav"-->
 
         <p><a href=
         "http://sourceforge.net/donate/index.php?group_id=7420"><img src=
@@ -95,23 +76,29 @@
     <div id="content">
       <!-- #BeginEditable "Text" -->
 
-      <h2>About the Media Decoders</h2>
+      <h1>Currently Active developers</h1>
 
-      <p>The very confusingly named DScaler 5 was a long term project to
-      migrate the key DScaler features of film detection and deinterlacing into
-      the DirectShow world. This project has stalled but the media decoders are
-      being maintained and published.</p>
+      <h2>John Adcock</h2>
 
-      <h2>Where are we?</h2>
+      <blockquote>
+        <p>John is the founder and maintainer of the project.</p>
+      </blockquote>
 
-      <p>At the moment the focus of the developement is in getting the core
-      decoders up and running. As each filter gets into a working state it will
-      be released as part of the alpha DScaler 5 package and will be announced
-      in the <a href="http://www.dscaler.org/phpBB/viewforum.php?f=8">DScaler 5
-      forum</a>.</p>
+      <h2>Torbjörn Jansson</h2>
 
-      <p>At the moment the MPEG audio and video filters are coming along
-      nicely.</p><!-- #EndEditable "Text"-->
+      <blockquote>
+        <p>Supplied various fixes.</p>
+      </blockquote>
+
+      <h2>Laurent Garnier</h2>
+
+      <blockquote>
+        <p>Worked on MP3 over SPDIF code.</p>
+      </blockquote>
+
+      <p>Please see the <a href="Thanks5.htm">Thanks</a> file for an incomplete
+      list of the many others who have contributed time and effort.</p>
+      <!-- #EndEditable "Text"-->
     </div><!--content-->
   </div><!--wrapper-content-->
 
