--- a/htdocs/Thanks5.htm
+++ b/htdocs/Thanks5.htm
@@ -12,7 +12,7 @@
   "HTML Tidy for Windows (vers 7 December 2008), see www.w3.org" />
   <!-- #BeginEditable "doctitle" -->
 
-  <title>DScaler Media Decoders</title><!-- #EndEditable "doctitle"-->
+  <title>DScaler - Thanks</title><!-- #EndEditable "doctitle"-->
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="keywords" content="deinterlace TV Video" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -50,7 +50,7 @@
     <div id="header">
       <div id="wrapper-header2">
         <div id="wrapper-header3">
-          <h1><!-- #BeginEditable "Page%20Title" -->DScaler Media Decoders 
+          <h1><!-- #BeginEditable "Page%20Title" -->Thanks&nbsp; 
           <!-- #EndEditable "Page%20Title"--></h1>
         </div><!--wrapper-header3-->
       </div><!--wrapper-header2-->
@@ -60,26 +60,7 @@
   <div id="wrapper-content">
     <div id="wrapper-menu-page">
       <div id="menu-page">
-        <!-- #BeginEditable "PageNav" -->
-
-        <h3>Get Media Decoders</h3>
-
-        <ul>
-          <li><a href=
-          "http://prdownloads.sourceforge.net/deinterlace/DScaler5008.exe">Experimental
-          (5.0.0.8)</a></li>
-        </ul>
-
-        <h3>Documentation</h3>
-        <ul>
-          <li><a href="./Help5/">Online Help</a><br /></li>
-  
-          <li><a href="Authors5.htm">Authors</a><br /></li>
-  
-          <li><a href="Thanks5.htm">Thanks</a><br /></li>
-        </ul>
-				
-				<!-- #EndEditable "PageNav"-->
+        <!-- #BeginEditable "PageNav" --><!-- #EndEditable "PageNav"-->
 
         <p><a href=
         "http://sourceforge.net/donate/index.php?group_id=7420"><img src=
@@ -95,23 +76,43 @@
     <div id="content">
       <!-- #BeginEditable "Text" -->
 
-      <h2>About the Media Decoders</h2>
+      <p>The DScaler team would like to express their gratitude to:</p>
 
-      <p>The very confusingly named DScaler 5 was a long term project to
-      migrate the key DScaler features of film detection and deinterlacing into
-      the DirectShow world. This project has stalled but the media decoders are
-      being maintained and published.</p>
+      <ul>
+        <li>All the <a href="Authors5.htm">authors</a> who have contributed code
+        to the project.</li>
 
-      <h2>Where are we?</h2>
+        <li>Daniel Schmelzer for his hard work creating and updating the
+        website.&nbsp;</li>
 
-      <p>At the moment the focus of the developement is in getting the core
-      decoders up and running. As each filter gets into a working state it will
-      be released as part of the alpha DScaler 5 package and will be announced
-      in the <a href="http://www.dscaler.org/phpBB/viewforum.php?f=8">DScaler 5
-      forum</a>.</p>
+        <li>All at the AVSForums for your encouragement and help. The HTPC
+        forum is easily the best group on the internet.</li>
 
-      <p>At the moment the MPEG audio and video filters are coming along
-      nicely.</p><!-- #EndEditable "Text"-->
+        <li>Phat Phreddy for the DScaler domains.</li>
+
+        <li>Everybody on the deinterlace project mailing list.</li>
+      </ul>
+
+      <h3>Related Software Projects</h3>
+
+      <blockquote>
+        <a href="http://mpc-hc.sourceforge.net/">Media Player Classic - Homecinema</a><br />
+      </blockquote>
+
+      <h3>Projects we've borrowed code from</h3>
+
+      <blockquote>
+        <a href="http://sourceforge.net/projects/guliverkli/">Media Player Classic</a><br />
+        <a href="http://ffmpeg.org/">FFmpeg</a><br />
+        <a href="http://liba52.sourceforge.net/">liba52</a><br />
+        <a href="http://www.videolan.org/developers/libdca.html">LibDca</a><br />
+        <a href="http://www.videolan.org/developers/libdvbpsi.html">libdvpsi</a><br />
+        <a href="http://www.audiocoding.com/faad2.html">libfaad</a><br />
+        <a href="http://www.underbit.com/products/mad/">libmad</a><br />
+        <a href="http://cr.yp.to/djbfft.html">djbfft</a><br />
+      </blockquote>
+
+			<!-- #EndEditable "Text"-->
     </div><!--content-->
   </div><!--wrapper-content-->
 
