Change SF on web pages per Sourceforge March 9, 2009 e-mail.

--- a/htdocs/dscaler4.htm
+++ b/htdocs/dscaler4.htm
@@ -96,9 +96,10 @@
         "http://images.sourceforge.net/images/project-support.jpg" width="88"
         height="32" border="0" alt="Support This Project" /></a></p>
 
-        <p><a href="http://sourceforge.net"><img src=
-        "http://sourceforge.net/sflogo.php?group_id=7420&amp;type=1" width="88"
-        height="31" border="0" alt="SourceForge.net" /></a></p>
+        <p><a href="http://sourceforge.net/projects/deinterlace"><img
+        src="http://sflogo.sourceforge.net/sflogo.php?group_id=7420&amp;type=10"
+        width="80" height="15" border="0" alt="Get DScaler Deinterlacer/Scaler at
+        SourceForge.net. Fast, secure and Free Open Source software downloads" /></a></p>
       </div><!--menu-page-->
     </div><!--wrapper-menu-page-->
 
