Update SF logo per SF March 9, 2009 e-mail.

--- a/DScaler/Help/Nav.htm
+++ b/DScaler/Help/Nav.htm
@@ -22,11 +22,10 @@
 <a href="../developers.htm" target="_top">Developers</a> | 
 </td>
 <td>
-<p><a href="http://sourceforge.net"><img src=
-"http://sourceforge.net/sflogo.php?group_id=7420&type=1" width=
-"88" height="31" border="0" alt="SourceForge.net" align="right">
-</a></p>
-</td>
+        <p><a href="http://sourceforge.net/projects/deinterlace"><img
+        src="http://sflogo.sourceforge.net/sflogo.php?group_id=7420&amp;type=10"
+        width="80" height="15" border="0" alt="Get DScaler Deinterlacer/Scaler at
+        SourceForge.net. Fast, secure and Free Open Source software downloads" /></a></p></td>
 </tr>
 </table>
 <!-- #EndTemplate -->
