Update version prior to release of 4.1.18

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
@@ -54,13 +54,15 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.17</h1>
+<h1>DScaler - version 4.1.18</h1>
 
-<h2>What's new (since 4.1.16):</h2>
+<h2>What's new (since 4.1.17):</h2>
 
 <h3>General</h3>
 <p><ul>
-<li>Signed Drivers for full support on 64bit OSes </li>
+<li>Changed compilers and upgraded main release to UNICODE</li>
+<li>Removed all use of MFC</li>
+<li>Fixed several memory issues</li>
 </ul></p>
 
 
@@ -74,7 +76,7 @@ height="2"></td>
 <p><ul>
 <li>New card definitions:
 <ul>
-<li>None</li>
+<li>Lots!</li>
 </ul></li>
 </ul></p>
 <h3>bt8x8 cards</h3>
@@ -82,7 +84,14 @@ height="2"></td>
 <li>New card definitions:
 <ul>
 <li>None</li>
-</ul></li>
+</ul>
+</ul>
+<h3>saa713x cards</h3>
+<p><ul>
+<li>New card definitions:
+<ul>
+<li>MSI TV@nywhere Pro (Pal)</li>
+</ul>
 </ul></p>
 <h2>What's Experimental:</h2>
 <p><ul>
