Changes for version 4.1.19

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,17 +54,16 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.18</h1>
+<h1>DScaler - version 4.1.19</h1>
 
-<h2>What's new (since 4.1.17):</h2>
+<h2>What's new (since 4.1.18):</h2>
 
 <h3>General</h3>
 <p><ul>
-<li>Changed compilers and upgraded main release to UNICODE</li>
-<li>Removed all use of MFC</li>
-<li>Fixed several memory issues</li>
+<li>Bug fixes for problems introduced in 4.1.18</li>
 </ul></p>
 
+<h2>What's new (since 4.1.17):</h2>
 
 <h2>What's Improved</h2>
 <h3>General</h3>
