Update donation page after recent donations

--- a/htdocs/donate.htm
+++ b/htdocs/donate.htm
@@ -96,8 +96,19 @@
         <li><a href="#project">Project Sponsorship</a></li>
       </ul>
 
-      <p>Each of these will be discusssed in more detail below.</p><a name=
-      "time" id="time"></a>
+      <p>Each of these will be discusssed in more detail below.</p>
+
+      <h2>Recent Sponsors</h2>
+
+      <p>The following have kindly contributed to the project:</p>
+
+      <p>Jamie Sarner a <a href="http://jamiesarner.com/">Toronto Realtor</a></p>
+      <p>Julie Kinnear from <a href="http://juliekinnear.com/">Toronto MLS Listings</a></p>
+      <p>David Tsegai from <a href="http://calgaryrealestate.ca/">Calgary Real Estate</a></p>
+      <p>Lorne Marr from <a href="http://lsminsurance.ca/">Life Insurance Canada</a></p>
+      <p>Jay Banks from <a href="http://jaybanks.ca/">Vancouver Lofts</a></p>
+
+      <a name="time" id="time"></a>
 
       <h2>Time</h2>
 
