Update version in help

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -49,12 +49,19 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3"></td>
 </tr>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.19</h1>
+<h1>DScaler - version 4.2.0</h1>
+
+<h2>What's new (since 4.1.19):</h2>
+
+<h3>General</h3>
+<p><ul>
+<li>Proposed fix for Can't create display memory</li>
+</ul></p>
 
 <h2>What's new (since 4.1.18):</h2>
 
