Update donation page after recent donation

--- a/htdocs/donate.htm
+++ b/htdocs/donate.htm
@@ -102,7 +102,10 @@
 
       <p>The following have kindly contributed to the project:</p>
 
+      <p><a href="http://drugrehabflorida.co/">Drug Rehab Florida</a></p>
+
       <p>Jamie Sarner a <a href="http://jamiesarner.com/">Toronto Realtor</a></p>
+
       <p>Julie Kinnear from <a href="http://juliekinnear.com/">Toronto MLS Listings</a></p>
       <p>David Tsegai from <a href="http://calgaryrealestate.ca/">Calgary Real Estate</a></p>
       <p>Lorne Marr from <a href="http://lsminsurance.ca/">Life Insurance Canada</a></p>
