--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,7 +54,16 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.2.0</h1>
+<h1>DScaler - version 4.2.1</h1>
+
+<h2>What's new (since 4.2.0):</h2>
+
+<h3>General</h3>
+<p><ul>
+<li>New setting to control if DScaler responds to media keys.</li>
+<li>POssible fix for overlay failing (also added improved logging to 
+help diagnose)</li>
+</ul></p>
 
 <h2>What's new (since 4.1.19):</h2>
 
